--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
@@ -30,6 +30,18 @@
                         </i> Manage Users </a>
                 </button>
             </div>
+            <button type="button" class=" menubtn" data-toggle="collapsebtn" data-target="#products"
+            (click)="productCollapse()">
+            <i class="fa fa-list" style="margin-right: 15px"></i>Products
+            </button>
+            <div class="collapsebtn" id="products" *ngIf="isProductCollapsed">
+                <button class="menubtn" style="padding-left: 40px; background-color: #334247;">
+                    <a [routerLink]="['/admin-dashboard/products']">
+                        <i class="fas fa-edit" style="margin-right: 10px"></i>
+                        Products List
+                    </a>
+                </button>
+            </div>
             <button class="menubtn" (click)="logout()">
                 <i class="fas fa-sign-out-alt" style="margin-right: 15px"></i>Logout
             </button>
