--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -10,7 +10,7 @@
           <th></th>
         </tr>
         <tr *ngFor="let product of products">
-          <td><a> {{ product.name }} </a></td>
+          <td> <a [routerLink]="['/admin-dashboard/product-details', product.id]"> {{ product.name }} </a> </td>
           <td>{{ product.price }}</td>
           <td>{{ product.category }}</td>
         </tr>
