--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -1,6 +1,5 @@
 <div class="container">
   <div class="row mt-5">
-   
     <div class="col md-10">
       <table>
         <tr>
@@ -13,8 +12,36 @@
           <td> <a [routerLink]="['/admin-dashboard/product-details', product.id]"> {{ product.name }} </a> </td>
           <td>{{ product.price }}</td>
           <td>{{ product.category }}</td>
+          <td> <button (click)=delete(product)>Delete</button> </td>
         </tr>
       </table>
     </div>
-    
-</div>
+  </div>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col md-10">
+        <form class="form-horizontal" novalidate (ngSubmit)="onFormSubmit(f)" #f="ngForm">
+          <div class="form-group">
+            <input type="text" placeholder="name" name="name" [(ngModel)]="producttoinsert.name" required>
+          </div>
+          <div class="form-group">
+            <input type="text" placeholder="description" name="description" [(ngModel)]="producttoinsert.description" required>
+          </div>
+          <div class="form-group">
+            <input type="number" min="0.1" step="0.1" placeholder="price" name="price" [(ngModel)]="producttoinsert.price" required> 
+          </div>
+          <div class="form-group">
+            <input type="number" min= "1" step="1" placeholder="availability" name="availability" [(ngModel)]="producttoinsert.availability" required> 
+          </div>
+          <div class="form-group">
+            <input type="text" placeholder="category" name="category" [(ngModel)]="producttoinsert.category" required>
+          </div>
+          <div class="form-group ">
+                <button type="submit" class="btn btn-success" [disabled]="f.form.invalid"> Insert new product
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+    </div>
+ 
