--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -7,12 +7,15 @@
           <th>Price</th>
           <th>Category</th>
           <th></th>
+          <th></th>
         </tr>
         <tr *ngFor="let product of products">
           <td> <a [routerLink]="['/admin-dashboard/product-details', product.id]"> {{ product.name }} </a> </td>
           <td>{{ product.price }}</td>
           <td>{{ product.category }}</td>
           <td> <button (click)=delete(product)>Delete</button> </td>
+          <td> <a [routerLink]="['/admin-dashboard/product-category', product.category]"> Ricerca tutti i prodotti di questa categoria </a></td>
+
         </tr>
       </table>
     </div>
