--- a/src/app/user/product-category/product-category.component.html
+++ b/src/app/user/product-category/product-category.component.html
@@ -6,13 +6,11 @@
           <th>Name</th>
           <th>Price</th>
           <th>Category</th>
-          <th></th>
         </tr>
-        <tr *ngFor="let product of products">
+        <tr *ngFor="let product of productList">
           <td> <a [routerLink]="['/user-dashboard/product-details', product.id]"> {{ product.name }} </a> </td>
           <td>{{ product.price }}</td>
           <td>{{ product.category }}</td>
-          <td> <a [routerLink]="['/user-dashboard/product-category', product.category]"> Ricerca tutti i prodotti di questa categoria </a></td>
         </tr>
       </table>
     </div>
