Added signu up component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,8 +13,8 @@
           <input class="form-control" type="password" id="pass" name="password" placeholder="Password" ngModel>
         </div>
         <button type="submit" (click)="login(f)">Login</button>
-        <button type="submit">Sign Up</button>
       </form>
     </div>
   </div>
 </div>
+<app-signup></app-signup>
