--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
@@ -11,12 +11,12 @@
             </button>
             <div class="collapsebtn" id="account" *ngIf="isAccountCollapsed">
                 <button class="menubtn" style="background-color: #334247; padding-left: 40px">
-                    <a [routerLink]="['/admin-dashboard/work-in-progress']"> <i class="fas fa-user-edit"
+                    <a [routerLink]="['/admin-dashboard/profile']"> <i class="fas fa-user-edit"
                             style="margin-right: 15px"></i>
                         Edit Profile</a>
                 </button>
                 <button class="menubtn" style="background-color: #334247; padding-left: 40px">
-                    <a [routerLink]="['/admin-dashboard/work-in-progress']"><i class="fas fa-file-alt"
+                    <a [routerLink]="['/admin-dashboard/users']"><i class="fas fa-file-alt"
                             style="margin-right: 15px"></i>General Info</a>
                 </button>
             </div>
