--- a/src/app/admin/profile/profile.component.html
+++ b/src/app/admin/profile/profile.component.html
@@ -1,6 +1,6 @@
 
 <div class="list-group">
-    <i class="fas fa-h" >Nome Utente: {{user.username}} </i>
+    <i class="fas fa-h" >Nome Utente: {{user.username}} {{user.password}} </i>
     
 </div>
 
@@ -13,12 +13,13 @@
         <table>
           <tr>
             <th>
-              Username
+              Nuovo Username
             </th>
             <th>
-              Password
+              Nuova Password
             </th>
             <th>
+              <i class="fas fa-user-edit"></i>
               Action
             </th>
     
@@ -32,7 +33,8 @@
               <input [(ngModel)]="user.password">
             </td>
             <td>
-              <button (click)=update(user)>Save</button>
+              
+              <button (click)=update(user) >Save</button>
     
            </td>
           </tr>
