--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
@@ -16,7 +16,7 @@
                         Edit Profile</a>
                 </button>
                 <button class="menubtn" style="background-color: #334247; padding-left: 40px">
-                    <a [routerLink]="['/admin-dashboard/users']"><i class="fas fa-file-alt"
+                    <a [routerLink]="['/admin-dashboard/work-in-progress']"><i class="fas fa-file-alt"
                             style="margin-right: 15px"></i>General Info</a>
                 </button>
             </div>
