--- a/src/app/admin/product-details/product-details.component.html
+++ b/src/app/admin/product-details/product-details.component.html
@@ -10,6 +10,9 @@
           <th>Availability</th>
           <th>Category</th>
           <th></th>
+          <th>Quantità <br>
+             da aggiungere <br>
+             all'ordine</th>
           <th></th>
         </tr>
         <tr>
@@ -19,7 +22,8 @@
           <td><input type="number"step="1" min= "1" [(ngModel)]="productRead.availability"> </td>
           <td><input type="text" [(ngModel)]="productRead.category" ></td>
           <td> <button (click)=update(productRead)>Edit</button> </td>
-          <td> <button> Aggiungi all'ordine </button> </td>
+          <td> <input type="number" step="1" min= "1" [value] = "quantity" [(ngModel)]="quantity" ></td>
+          <td> <button (click)=addToShoppingList(productRead) > Aggiungi <br> all'ordine </button> </td>
         </tr>
       </table>
     </div>
