--- a/src/app/shoppinglist-details/shoppinglist-details.component.html
+++ b/src/app/shoppinglist-details/shoppinglist-details.component.html
@@ -9,15 +9,13 @@
           <th>Quantity</th>
           <th>Total Price</th>
           <!-- <th>Date</th> -->
-          <th></th>
         </tr>
         <tr>
-          <td>{{ productRead.userId }} </td>
-          <td>{{ productRead.productId }}</td>
-          <td>{{ productRead.quantity }}</td>
-          <td>{{ productRead.totalPrice }}</td>
+          <td>{{ shoppinglistRead.userId }} </td>
+          <td>{{ shoppinglistRead.productId }}</td>
+          <td>{{ shoppinglistRead.quantity }}</td>
+          <td>{{ shoppinglistRead.totalPrice }}</td>
           <!-- <td>{{ productRead.date }}</td> -->
-          <td> <button> Aggiungi all'ordine </button> </td>
         </tr>
       </table>
     </div>
