--- a/src/app/admin/profile/profile.component.html
+++ b/src/app/admin/profile/profile.component.html
@@ -35,7 +35,7 @@
             <td>
               
               <button (click)=update(user) >Save</button>
-    
+              <button (click)=reset(user) >Reset</button>
            </td>
           </tr>
         </table>
